<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home" />

    <item
        android:id="@+id/taskFragment"
        android:icon="@drawable/ic_nav_task"
        android:title="@string/tasks_lower_case" />

    <!-- Placeholder cho nút Add Task (FAB) -->
    <item
        android:id="@+id/placeholder"
        android:icon="@android:color/transparent"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/calenderFragment"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/settings" />
</menu>