<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemOnboarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/cherry_bomb_one"
        android:text="@string/todo"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgOnboard"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvTitleOnboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/title_here"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescOnboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description_goes_here"
        android:textColor="#424242"
        android:textSize="14sp" />

</LinearLayout>