<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnl_task_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="12dp"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/iv_status"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_circle_hollow"
        android:contentDescription="@string/todo"/>

    <!-- Priority Indicator Line -->
    <LinearLayout
        android:id="@+id/view_priority_indicator"
        android:layout_width="4dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:background="@color/green"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/tv_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/task_title"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_folder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#999999"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_task_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_09_00_am"
        android:textColor="#999999"
        android:textSize="12sp"
        android:visibility="visible" />

</LinearLayout>