<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.TaskFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_rounded_bg"
            android:src="@drawable/ic_arrow_back"
            android:stateListAnimator="@animator/btn_click_scale" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tasks_lower_case"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ced8dd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lnlAddTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/btn_click_scale"
            android:foreground="@drawable/ripple_rounded_bg">
            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/ic_add_task"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks_upper_case"
            android:layout_marginBottom="18dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/lnlFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTabToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/filter_task_bg"
                android:textSize="20sp"
                android:textColor="#4a93ce"
                android:clickable="true"
                android:focusable="true"
                android:stateListAnimator="@animator/btn_click_scale"
                android:foreground="@drawable/ripple_rounded_bg"/>

            <TextView
                android:id="@+id/tvTabUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/upcoming"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp"
                android:textColor="#A0A0A0"
                android:clickable="true"
                android:focusable="true"
                android:stateListAnimator="@animator/btn_click_scale"
                android:foreground="@drawable/ripple_rounded_bg"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFolderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_folder_group" />

        <FrameLayout
            android:id="@+id/blank"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_grey">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="There is no task here"/>
        </FrameLayout>

    </LinearLayout>


</LinearLayout>